--- a/style/zanui/cell/index.wxml
+++ b/style/zanui/cell/index.wxml
@@ -1,5 +1,5 @@
 <view 
-  bindtap="cellTap"
+  catchtap="cellTap"
   class="zan-cell {{ isLastCell ? 'last-cell' : '' }} {{ isLink ? 'zan-cell--access' : '' }}">
 
   <view class="zan-cell__icon">
@@ -12,7 +12,7 @@
     <slot></slot>
   </view>
 
-  <view catchtap="navigateTo" class="zan-cell__ft">
+  <view bindtap="footerTap" class="zan-cell__ft">
     <block wx:if="{{value}}">{{ value }}</block>
     <block wx:else>
       <slot name="footer"></slot>
