--- a/pages/scenicdetail/scenicdetail.wxss
+++ b/pages/scenicdetail/scenicdetail.wxss
@@ -1,46 +1,91 @@
 /* pages/scenicdetail/scenicdetail.wxss */
 page {
+  height: auto;
+  background-image: url("http://img5.imgtn.bdimg.com/it/u=1839364205,823342860&fm=27&gp=0.jpg");
+  background-attachment: fixed;
+}
+
+.bg {
   height: 100%;
   width: 100%;
-  background-color: ghostwhite;
+  
+}
+
+.intro_border {
+  
+  border: 10rpx solid rgba(226, 186, 115, 0.8);
 }
 
 .detail {
   height: auto;
-  /* width: 100%; */
-  padding-left: 10rpx;
-  padding-right: 10rpx;
-  font-size: 80%;
+  /* 设置间隔 */
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  /* 设置背景透明度  */
+  background-color: rgba(230, 230, 230, 0.8);
+  /* 设置字体  */
+  font-family: cursive;
+}
+
+.detailintro {
+
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.detailTitle {
+
+  text-decoration: underline;
+}
+
+.activity_border {
+  border: 10rpx solid rgba(226, 186, 115, 0.8);
 }
 
 .activity {
-  height: auto;
-  /* width: 100%; */
-  padding-top: 100rpx;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.activity_content {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .activity_item {
   height: auto;
-  /* width: 100%; */
-  padding-left: 10rpx;
-  padding-top: 10rpx;
-  padding-right: 10rpx;
-  background: #ebebeb;
-  border: 10rpx solid #ffffff;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  /* background-color: rgba(210, 198, 176, 0.6); */
+  border: 1rpx solid rgba(226, 186, 115, 0.8);
 }
 
 .time {
-  /* width: 100%; */
   position: relative;
   left:45%;
   /**设置字体大小 使用父元素的百分比作为单位**/
   font-size: 70%;
 }
 
+.warning_border {
+  border: 10rpx solid rgba(226, 186, 115, 0.8);
+}
+
 .warning {
   height: auto;
-  /* width: 100%; */
   padding-top: 50rpx;  
+}
+
+.warning_content {
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
 }
 
 .button {
@@ -48,5 +93,6 @@ page {
   position: fixed;
   bottom: 5rpx;
   right: 5rpx;
-  background-color: #ebebeb;
+  padding-right: 10px;
+  padding-bottom: 10px;
 }
