--- a/pages/intro/intro.wxss
+++ b/pages/intro/intro.wxss
@@ -1,7 +1,7 @@
 /* pages/intro/intro.wxss */
 
 @import "../scenicdetail/scenicdetail.wxss";
-/* @import "../restaurant/restaurant.wxss"; */
+@import "../restaurant/restaurant.wxss"; 
 
 page {
   width: 100%;
@@ -32,14 +32,16 @@ page {
 
 /* ======简介====== */
 .brief-intro-wrapper {
+  width: 100%;
   position: absolute;
   left: 0;
   bottom: 0;
   z-index: 100;
-  padding-top: 20px;
+  padding-top: 10px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 10px;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8));
 }
 
 .title {
