--- a/pages/restaurant/restaurant.wxml
+++ b/pages/restaurant/restaurant.wxml
@@ -27,19 +27,22 @@
 <template name="restaurant-template">
   <view class='restaurant'>
     <block wx:for-items="{{categories}}" wx:key="{{item.category}}">
-      <view class='category' data-category='{{item.category}}' bindtap='showMenu'>
-        <view class='category_name'>
-          <text>{{item.category}}</text>
+      <view class='category' data-category='{{item.category}}'>
+        <view class='category-name'>
+          <view class='detailTitle'>
+            <text>{{item.category}}\n\n</text>
+          </view>
         </view>
-        <view class='{{item.open ? "menu_list" : "close"}}'>
+        <view class='menu_list'>
           <block wx:for-items="{{item.menus}}" wx:key="{{item.menus.menuId}}">
             <view class='menu'>
-            <view class='menu_image'>
-            <image style="width:50px; height: 50px;" src="{{item.imagePath}}" mode="aspectFit"></image>
-            </view>
+              <view class='menu_image'>
+                <image mode='aspectFill' src="{{item.imagePath}}"></image>
+              </view>
               <view class='menu_content'>
-                <text>{{item.name}}\n</text>
-                <text>价格：{{item.price}}元</text>
+                <text class='menu-title'>{{item.name}}\n</text>
+                <text wx:if='{{item.price > 0}}' class='menu-price'>￥{{item.price}}</text>
+                <text wx:else class='menu-none-price'>暂无价格</text>
               </view>
             </view>
           </block>
