--- a/pages/restaurant/restaurant.wxss
+++ b/pages/restaurant/restaurant.wxss
@@ -1,61 +1,60 @@
 .restaurant {
   padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
   font-family: cursive;
 }
 
-.category {
-  display: block;
-  border-bottom: 1px solid #aaa;
-  /* padding-top: 10px; */
-  border: 1px solid silver;
-  border-radius: 5px;
-}
-
-.category_name {
-  height: 30px;
-  background-color: whitesmoke;
-  border-bottom: 1px solid #aaa;
-  padding-top: 10px;
-  /* padding-bottom: 10px; */
-  padding-left: 5px;
-  /* padding-right: 10px; */
-}
-
-.close {
-  display: none;
+.category-name {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .menu_list {
   display: flex;
   flex-direction: column;
+  padding-top: 5px;
+  /* background-color: white;
+  border-radius: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #DDD; */
 }
 
 .menu{
   flex-direction: row;
-  display: flex; 
-  padding-top: 10px;
-  padding-left: 5px;
-  padding-bottom: 5px;
-  border-bottom: 1px solid #aaa;
+  display: flex;
+  margin-bottom: 10px; 
+  background-color: rgba(0,0,0,0);
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .menu_content {
   padding-left: 20px;
+  line-height: 25px; 
+}
+
+.menu-title {
+  font-size: 17px;
+}
+
+.menu-price {
+  color: coral;
+  font-size: 20px;
+}
+
+.menu-none-price {
+  color: rgba(0,0,0,0.5);
+  font-size: 14px;
 }
 
 .menu_image {
-  height: auto;
-  width: auto;
+  width: 50px;
+  height: 50px;
+   border-radius:50%;  
+  overflow:hidden;
 }
 
-.button {
-  height: auto;
-  position: fixed;
-  bottom: 5rpx;
-  right: 5rpx;
-  padding-bottom: 10px;
-  padding-right: 10px;
+.menu_image>image {
+  width: 50px;
+  height: 50px;
 }
