--- a/pages/input/input.wxml
+++ b/pages/input/input.wxml
@@ -39,4 +39,7 @@
       </view>
     </view>
   </form>
+  <view class='button'>
+    <image style="width: 50px; height: 40px;" mode="aspectFit" src="../../img/comment.png" bindtap='openComment'></image>
+  </view>
 </view>
