--- a/pages/inputmenu/inputmenu.wxss
+++ b/pages/inputmenu/inputmenu.wxss
@@ -1,20 +1,129 @@
-/* pages/inputmenu/inputmenu.wxss */
-.page {
-  height: 100%;
+/* pages/intro/intro.wxss */
+
+@import "../scenicdetail/scenicdetail.wxss";
+@import "../restaurant/restaurant.wxss"; 
+
+page {
   width: 100%;
+  height: 100%;
+  background-color: #f8f8f8;
 }
 
 .wrapper {
-  padding: 10px;
+  width: 100%;
+  height: 100%;
 }
+
+/* ======内容====== */
+.content-wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+}
+
+/* ======背景====== */
+.background-wrapper {
+  width: 100%;
+  /* 使wrapper贴合图片 */
+  display: flex;
+  position: relative;
+  /* 固定背景图片 */
+  z-index: 10;
+}
+
+/* ======简介====== */
+.brief-intro-wrapper {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8));
+}
+
+.title {
+  color: #FFF; /* TODO: 微调 */
+  font-size: 17pt;
+  width: 60%;
+}
+
+.title > input {
+  font-size: 17pt;
+  border-color: #FFF; 
+  border-style: solid; 
+  border-top-width: 0px;
+  border-right-width: 0px; 
+  border-bottom-width: 1px;
+  border-left-width: 0px;
+}
+
+.brief-intro {
+  color: #EEE; /* TODO: 微调 */
+  font-size: 11pt;
+  width: 80%;
+  margin-top: 5px;
+  margin-right: 20px;
+}
+
+.brief-intro > input {
+  font-size: 11pt;
+  border-color: #FFF; 
+  border-style: solid; 
+  border-top-width: 0px;
+  border-right-width: 0px; 
+  border-bottom-width: 1px;
+  border-left-width: 0px;
+}
+
+.title-input {
+  color: #FFF; /* TODO: 微调 */
+  font-size: 17pt;
+}
+
+.brief-intro-input {
+  color: #EEE; /* TODO: 微调 */
+  font-size: 11pt;
+}
+
+.info-wrapper {
+  position: relative;
+  z-index: 100;
+  border-radius: 20px;  
+}
+
+/* ====== 按钮 ====== */
+
+.add-menu-button {
+  display: flex;
+  flex-direction: row-reverse;
+
+  margin-top: 10px;
+  margin-bottom: 40px;
+  margin-right: 20px;
+}
+
+/* ====== 菜单 ====== */
 
 .border {
   border: 1px solid gainsboro;
-  margin: 5px;
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 5px;
 }
 
 .detail-menu {
-  padding: 10px;
+  height: auto;
+  font-family: cursive;
+  font-size: 80%;
+}
+
+.detail-menu-category {
+  padding-left: 5px;
 }
 
 .detail-menu-name {
@@ -25,7 +134,8 @@
 .detail-menu-content {
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .menu-image {
@@ -42,11 +152,15 @@
 .menu-content- {
   display: flex;
   flex-direction: row;
-  padding-left: 5px;
+  margin-bottom: 15px;
+  border: 1px solid gainsboro;
+  border-radius: 5px;
 }
 
-.add-menu-button {
-  display: flex;
-  flex-direction: row;
-  margin-top: 10px;
+/* ======= 隐藏滚动条 ======= */
+
+::-webkit-scrollbar{
+  width: 0;
+  height: 0;
+  color: transparent;
 }
