--- a/pages/inputscenic/inputscenic.wxml
+++ b/pages/inputscenic/inputscenic.wxml
@@ -1,53 +1,93 @@
-<!--pages/inputdetail/inputdetail.wxml-->
-<view class='wrapper'>
-  <view class='detail-intro'>
-    <text>详细介绍</text>
-    <view class='border'>
-      <textarea name='intro' placeholder='请输入详细介绍' style='height: 400px;' maxlength='-1' bindblur='introInput'></textarea>
-    </view>
-  </view>
-  <text>活动列表</text>
-  <block wx:for-items="{{activities}}" wx:key="{{item.id}}">
-    <view class='detail-activity' bindtap='setCurrentId' data-id='{{item.id}}'>
-      <view class='border'>
-        <view class='detail-activity-name'>
-          <text decode='true'>名称&nbsp;&nbsp;</text>
-          <input placeholder='请输入活动名称' bindblur='activityNameInput'></input>
+<!--pages/intro/intro.wxml-->
+<scroll-view class='content-wrapper' scroll-y="true">
+  <view style='width:100%; height:100%;'>
+    <view class='background-wrapper'>
+      <image style='height: {{bg_H}}px; width: 100%;' src='{{bg_Img}}' bindtap="chooseImage"></image>
+      <view class='brief-intro-wrapper'>
+        <view class='brief-intro-content-wrapper '>
+          <view class='title' style='width: 200px;'>
+            <input 
+              placeholder-class='placeholder-title'
+              placeholder='请输入标题'
+              type='text'
+              maxlength='10'
+              bindblur='titleInput'
+            ></input>
+          </view>
+          <view class='brief-intro'>
+            <input 
+              placeholder-class='placeholder-brief' 
+              bindblur='briefInput' 
+              placeholder='请输入简介' 
+              maxlength='30'
+            ></input>
+          </view>
         </view>
       </view>
-      <view>
-        <text>介绍</text>
-        <view class='border'>
-          <textarea placeholder='请输入活动介绍' maxlength='300' bindblur='activityIntroInput'></textarea>
+    </view>
+    <view class='detail'>
+      <view class='detailintro'>
+        <view class='detailTitle'>
+          <text>详细介绍\n\n</text>
+        </view>
+        <!-- 介绍框  -->
+        <view class='detail-intro-input'>
+          <textarea placeholder='请输入详细介绍' maxlength='-1' bindblur='introInput'></textarea>
         </view>
       </view>
-      <view class='detail-activity-picker'>
-        <text decode='true'>开始时间: &nbsp;</text>
-        <picker mode='date' value='2018-01-01' start="2018-01-01" end="2048-01-01" bindchange='bindBeginDateChange'>{{item.beginDate}}</picker>
-        <text decode='true'>&nbsp;&nbsp;&nbsp;</text>
-        <picker mode='time' value='12:00' start='00:00' end='23:59' bindchange='bindBeginTimeChange'>{{item.beginTime}}</picker>
+      <view class='activity_content'>
+        <view class='detailTitle'>
+          <text>近期活动\n\n</text>
+        </view>
+        <block wx:for-items="{{activities}}" wx:key="{{item.id}}">
+          <view class='detail-activity' bindtap='setCurrentId' data-id='{{item.id}}'>
+            <view class='spot-brief-border'>
+              <view class='detail-activity-name'>
+                <input placeholder='请输入活动标题' bindblur='activityNameInput'></input>
+              </view>
+            </view>
+            <view>
+              <view class='spot-brief-border'>
+                <textarea placeholder='请输入活动介绍' maxlength='300' bindblur='activityIntroInput'></textarea>
+              </view>
+            </view>
+            <view class='detail-activity-picker'>
+              <text decode='true'>开始时间: &nbsp;</text>
+              <picker mode='date' value='2018-01-01' start="2018-01-01" end="2048-01-01" bindchange='bindBeginDateChange'>{{item.beginDate}}</picker>
+              <text decode='true'>&nbsp;&nbsp;&nbsp;</text>
+              <picker mode='time' value='12:00' start='00:00' end='23:59' bindchange='bindBeginTimeChange'>{{item.beginTime}}</picker>
+            </view>
+            <view class='detail-activity-picker'>
+              <text decode='true'>结束时间: &nbsp;</text>
+              <picker mode='date' value='2018-01-01' start="2018-01-01" end="2048-01-01" bindchange='bindEndDateChange'>{{item.endDate}}</picker>
+              <text decode='true'>&nbsp;&nbsp;&nbsp;</text>
+              <picker mode='time' value='17:00' start='00:00' end='23:59' bindchange='bindEndTimeChange'>{{item.endTime}}</picker>
+            </view>
+          </view>
+        </block>
+        <view class='detail-activity-button'>
+          <image src='../../image/add_button.png' bindtap='addActivity' style='height: 40px; width: 40px'></image>
+          <image src='../../image/remove_button.png' bindtap='removeActivity' style='height: 40px; width: 40px'></image>
+        </view>
       </view>
-      <view class='detail-activity-picker'>
-        <text decode='true'>结束时间: &nbsp;</text>
-        <picker mode='date' value='2018-01-01' start="2018-01-01" end="2048-01-01" bindchange='bindEndDateChange'>{{item.endDate}}</picker>
-        <text decode='true'>&nbsp;&nbsp;&nbsp;</text>
-        <picker mode='time' value='17:00' start='00:00' end='23:59' bindchange='bindEndTimeChange'>{{item.endTime}}</picker>
+
+      <view class='warning_content'>
+        <view class='warning'>
+          <view class='detailTitle'>
+            <text>提醒\n\n</text>
+          </view>
+          <view class='spot-brief-border'>
+            <textarea name='warning' placeholder='请输入注意事项' maxlength='300' bindinput='warningInput'></textarea>
+          </view>
+        </view>
+      </view>
+      <view class='save' style='padding-top:60px;'>
+        <button bindtap='confirm' type='primary'>确定</button>
+        <view style='padding-top: 10px; padding-bottom: 10px;'>
+          <button bindtap='cancel' style='background: whitesmoke'>取消</button>
+          <text>\n\n\n\n\n\n\n\n</text>
+        </view>
       </view>
     </view>
-  </block>
-  <view class='detail-activity-button'>
-    <button bindtap='addActivity' type='primary' size='mini'>添加活动</button>
-    <button bindtap='removeActivity' type='warn' size='mini'>删除活动</button>
   </view>
-  <view class='detail-warning'>
-    <text>温馨提示</text>
-    <view class='border'>
-      <textarea name='warning' placeholder='请输入提示信息' maxlength='300' bindblur='warningInput'></textarea>
-    </view>
-  </view>
-  <button bindtap='confirm' type='primary'>确定</button>
-  <view style='padding-top: 10px; padding-bottom: 10px;'>
-    <button bindtap='cancel' type='warn'>取消</button>
-    <text>\n\n\n\n\n\n\n\n</text>
-  </view>
-</view>
+</scroll-view>
