--- a/pages/inputscenic/inputscenic.wxss
+++ b/pages/inputscenic/inputscenic.wxss
@@ -1,26 +1,97 @@
-/* pages/inputdetail/inputdetail.wxss */
+/* pages/intro/intro.wxss */
+
+@import "../scenicdetail/scenicdetail.wxss";
+@import "../restaurant/restaurant.wxss"; 
+
 page {
-  height: 100%;
   width: 100%;
+  height: 100%;
+  background-color: #f8f8f8;
 }
 
 .wrapper {
-  padding: 10px;
-  background-color: whitesmoke;
+  width: 100%;
+  height: 100%;
 }
 
-.border {
+.placeholder-title{
+  color: #FFF;
+}
+
+.placeholder-brief{
+  color: #EEE;
+}
+
+/* ======内容====== */
+.content-wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+}
+
+/* ======背景====== */
+.background-wrapper {
+  /* 使wrapper贴合图片 */
+  display: flex;
+  position: relative;
+  /* 固定背景图片 */
+  z-index: 10;
+}
+
+/* ======简介====== */
+.brief-intro-wrapper {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+   background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8)); 
+}
+
+.title {
+  color: #FFF; /* TODO: 微调 */
+  font-size: 17pt;
   border: 1px solid gainsboro;
+  border-top-width: 0px;
+  border-right-width: 0px; 
+  border-bottom-width: 1px;
+  border-left-width: 0px;
 }
 
-.detail-intro {
-  background-color: white;
-  padding: 10px;
+.brief-intro {
+  color: #EEE; /* TODO: 微调 */
+  font-size: 11pt;
+  width: 90%;
+  border: 1px solid gainsboro;
+  border-top-width: 0px;
+  border-right-width: 0px; 
+  border-bottom-width: 1px;
+  border-left-width: 0px;
+  margin-top: 5px;
+}
+
+.info-wrapper {
+  position: relative;
+  z-index: 100;
+  border-radius: 20px;  
+}
+
+.detail-intro-input {
+  border: 1px solid gainsboro;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar{
+  width: 0;
+  height: 0;
+  color: transparent;
 }
 
 .detail-activity {
-  background-color: white;
-  padding: 10px;
   margin-bottom: 10px;
 }
 
@@ -33,21 +104,26 @@ page {
 
 .detail-activity-button {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
 
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.detail-warning {
-  padding: 10px;
-  background-color: white;
-}
-
 .detail-activity-picker {
-  background: #CABBC7;
+  background: whitesmoke;
   padding: 5px;
 
   display: flex;
   flex-direction: row;
+}
+
+.spot-brief-border {
+  border: 1px solid gainsboro;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+.save {
+  margin: 10px;
 }
