--- a/pages/intro/intro.wxml
+++ b/pages/intro/intro.wxml
@@ -4,11 +4,16 @@
 <import src="../sb/sb.wxml"/>
 <import src="../restaurant/restaurant.wxml"/>
 
-<swiper class='wrapper' bindchange='swiperChange' autoHeight='true'>      
+<swiper class='wrapper' bindchange='swiperChange' autoHeight='true'>       
   <block wx:for-items="{{spots}}" wx:key="{{spots.spotId}}">
-    <swiper-item item-id="{{spots.spotId}}">       
+    <swiper-item item-id="{{spots.spotId}}">        
       <scroll-view class='content-wrapper' scroll-y="true">
-        <view id="ruler{{item.id}}" style='width100%; height:100%;' bindtouchstart='touchStart' bindtouchmove='touchMove'>
+        <view 
+          id="ruler{{item.id}}"
+          style='width: 100%; height:100%;' 
+          bindtouchstart='touchStart' 
+          bindtouchmove='touchMove'
+        >
         <view class='background-wrapper'>
           <image
             style='height: {{bg_H}}px;
@@ -25,10 +30,15 @@
           <block wx:if="{{item.ready}}">
             <template wx:if="{{item.category == 'scenic'}}" is="scenic-spot-template" data="{{...item.info}}"></template>  
             <template wx:if="{{item.category == 'restaurant'}}" is="restaurant-template" data="{{...item.info}}"></template>
+            <view class='button-wrapper'>
+              <view class='button'>
+                <image class='button-img' mode="aspectFit" src="../../img/comment.png" bindtap='openComment'></image> 
+              </view>
+            </view>
           </block>
         </view>
         </view>
       </scroll-view>
-    </swiper-item>  
+    </swiper-item>   
   </block>
-</swiper>  
+</swiper>   
