--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -5,4 +5,14 @@
   bindcontroltap="controltap" 
   markers="{{markers}}" bindmarkertap="markertap" 
   show-location style="width: 100%; height: 1200rpx;">
+  <cover-view class='button-wrapper'>
+    <cover-view class='button'>
+      <cover-image 
+        class='button-img' 
+        mode="aspectFit" 
+        src="../../image/add.png"
+        bindtap='controltap' 
+      ></cover-image> 
+    </cover-view>
+  </cover-view>
 </map>
