--- a/pages/intro/intro.wxml
+++ b/pages/intro/intro.wxml
@@ -1,44 +1,46 @@
 <!--pages/intro/intro.wxml-->
 
 <import src="../scenicdetail/scenicdetail.wxml"/>
-<import src="../sb/sb.wxml"/>
 <import src="../restaurant/restaurant.wxml"/>
 
 <swiper class='wrapper' bindchange='swiperChange' autoHeight='true'>       
   <block wx:for-items="{{spots}}" wx:key="{{spots.spotId}}">
     <swiper-item item-id="{{spots.spotId}}">        
-      <scroll-view class='content-wrapper' scroll-y="true">
+      <view class='content-wrapper' scroll-y="true">
         <view 
           id="ruler{{item.id}}"
           style='width: 100%; height:100%;' 
-          bindtouchstart='touchStart' 
-          bindtouchmove='touchMove'
         >
-        <view class='background-wrapper'>
-          <image
-            style='height: {{bg_H}}px;
-            src='{{item.bgImg}}'
-          ></image>
-          <view class='brief-intro-wrapper'>
-            <view class='brief-intro-content-wrapper'>
-              <view class='title'>{{item.name}}</view>
-              <view class='brief-intro'>{{item.briefIntro}}</view>
-            </view>
-          </view>
-        </view>
-        <view class='info-wrapper'>
-          <block wx:if="{{item.ready}}">
-            <template wx:if="{{item.category == 'scenic'}}" is="scenic-spot-template" data="{{...item.info}}"></template>  
-            <template wx:if="{{item.category == 'restaurant'}}" is="restaurant-template" data="{{...item.info}}"></template>
-            <view class='button-wrapper'>
-              <view class='button'>
-                <image class='button-img' mode="aspectFit" src="../../img/comment.png" bindtap='openComment'></image> 
+          <view class='background-wrapper'>
+            <image
+              style='height: {{bg_H}}px;
+              src='{{item.bgImg}}'
+            ></image>
+            <view class='brief-intro-wrapper'>
+              <view class='brief-intro-content-wrapper'>
+                <view class='title'>{{item.name}}</view>
+                <view class='brief-intro'>{{item.briefIntro}}</view>
               </view>
             </view>
-          </block>
+          </view>
+          <view class='info-wrapper'>
+            <block wx:if="{{item.ready}}">
+              <template wx:if="{{item.category == 'scenic'}}" is="scenic-spot-template" data="{{...item.info}}"></template>  
+              <template wx:if="{{item.category == 'restaurant'}}" is="restaurant-template" data="{{...item.info}}"></template>
+              <view class='button-wrapper'>
+                <view class='button'>
+                  <image class='button-img' mode="aspectFit" src="../../img/comment.png" bindtap='openComment'></image> 
+                </view>
+              </view>
+              <view class='button-wrapper-map'>
+                <view class='button'>
+                  <image class='button-img' mode="aspectFit" src="../../image/map.png" bindtap='openMap'></image> 
+                </view>
+              </view>
+            </block>
+          </view>
         </view>
-        </view>
-      </scroll-view>
+      </view>
     </swiper-item>   
   </block>
 </swiper>   
