--- a/pages/intro/intro.wxss
+++ b/pages/intro/intro.wxss
@@ -18,7 +18,8 @@ page {
 .content-wrapper {
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 /* ======背景====== */
@@ -47,6 +48,7 @@ page {
   padding-right: 20px;
   padding-bottom: 10px;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8));
+  overflow: hidden;
 }
 
 .title {
@@ -69,7 +71,15 @@ page {
 .button-wrapper {
   position: fixed;
   bottom: 20px;
-  right: 10px;
+  right: 5px;
+  width: 50px;
+  height: 50px;
+}
+
+.button-wrapper-map {
+  position: fixed;
+  bottom: 70px;
+  right: 5px;
   width: 50px;
   height: 50px;
 }
